# serde-cpp

./: CMakeLists.txt  README.md
examples/: basic_toml.cpp  config.toml
include/serde/: result.hpp  toml.hpp
tests/: CMakeLists.txt  basic_toml_test.cpp
tests/configs/: bad_config.toml  config.toml
